test/1.4/errors/T_WTTYPEC.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// COMPILE-ONLY

method m() {}

method init() {
    // no warning
    after cast(4, uint8) cycles: m();
    after cast(4, uint32) cycles: m();
    after cast(4, uint64) cycles: m();
    after cast(4, int64_be_t) cycles: m();
    after cast(4, int64_le_t) cycles: m();
    after cast(4.5, int64) cycles: m();
    /// WARNING WTTYPEC
    after 4.5 cycles: m();
}
